--- a/webj-17_54th/tickets.html
+++ b/webj-17_54th/tickets.html
@@ -107,6 +107,7 @@
                 alert("please fill all the blank");
             }else{
             $.post("tikcets.php",formData)
+                //這個是ajax post的語法
             }
         }else{
             $("form").effect("shake")
